ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress

spec:
  rules:
  - host: sometest.net
    http:
      paths:
      - backend:
        serviceName: nginx
        servicePort: 80
